@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Fix Answered/Forwarded flag setting for messages in subfolders
 - Fix autocomplete problem with capital letters (#1485792)
 - Support UUencode content encoding (#1485839)
 - Minimize chance of race condition in session handling (#1485659, #1484678)
